call log table trial

--- a/static/main.html
+++ b/static/main.html
@@ -267,6 +267,24 @@
                         <span class="icon"><i class="fas fa-plus" aria-hidden="true"></i></span>
                     </div>
                   </div>
+                  <div class="mx-5 mt-6">
+                    <h2 class="subtitle is-4 my-1">Call Logs</h2>
+
+                    <div id="callog-settings" class="box p-4">
+                      <table class="table is-striped is-hoverable is-fullwidth">
+                        <thead>
+                          <tr>
+                            <th>Field1</th>
+                            <th>Field2</th>
+                          </tr>
+                        </thead>
+
+                        <tbody id="call-log-settings">
+                          <!-- Your dynamic rows will fill here -->
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
                 </section>
                 <footer class="modal-card-foot py-2">
                   <div class="columns" style="width:100%;">
